find friends by social media profiles

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -320,6 +320,7 @@
       "copyExplorerCode": "Copy Explorer Code",
       "devices": "Devices",
       "editProfile": "Edit Profile",
+      "findFriends": "Find Friends",
       "groups": "Groups",
       "home": "Home"
     }
