add email to social media variations

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -579,6 +579,7 @@
       "socialPrevious": "Prev"
     },
     "label": {
+      "contactInfo": "Contact Info",
       "currentPassword": "Current password",
       "name": "Name",
       "newPassword": "New password",
