--- a/BrightID/locales/ru/translation.json
+++ b/BrightID/locales/ru/translation.json
@@ -325,6 +325,7 @@
       "contactUs": "Связаться с нами",
       "copyExplorerCode": "Скопировать Explorer код",
       "editProfile": "Редактировать профиль",
+      "findFriends": "приглашать",
       "groups": "Группы",
       "home": "Главная страница"
     }
@@ -777,6 +778,14 @@
       "gotIt": "Понял!",
       "setPassword": "Вы всегда можете установить свой\nпароль для BrightID здесь",
       "viewPassword": "Вы всегда можете увидеть свой\nпароль от BrightID здесь"
+    }
+  },
+  "findFriends" : {
+    "button": {
+      "invite": "приглашать"
+    },
+    "text": {
+      "invitationNotAvailable": "К сожалению, отправка приглашения в настоящее время недоступна для этого приложения."
     }
   }
 }
