--- a/BrightID/locales/hi/translation.json
+++ b/BrightID/locales/hi/translation.json
@@ -308,6 +308,7 @@
       "contactUs": "संपर्क करें",
       "copyExplorerCode": "एक्सप्लोरर कोड कॉपी करें",
       "editProfile": "प्रोफ़ाइल संपादित करें",
+      "findFriends": "आमंत्रण",
       "home": "होम"
     }
   },
@@ -729,6 +730,14 @@
       "gotIt": "समझ गया!",
       "setPassword": "आप हमेशा सेट कर सकते हैं\nयहां BrightID पासवर्ड है",
       "viewPassword": "आप हमेशा देख सकते हैं\nयह है BrightID पासवर्ड"
+    }
+  },
+  "findFriends" : {
+    "button": {
+      "invite": "आमंत्रण"
+    },
+    "text": {
+      "invitationNotAvailable": "क्षमा करें, वर्तमान में इस ऐप के लिए आमंत्रण भेजने की सुविधा उपलब्ध नहीं है।"
     }
   }
 }
