--- a/BrightID/locales/ca/translation.json
+++ b/BrightID/locales/ca/translation.json
@@ -34,6 +34,13 @@
       "findFriends": "convidar"
     }
   },
+  "common": {
+    "alert": {
+      "text": {
+        "commonError": "Ho sentim, no hem pogut completar la teva sol·licitud. Si us plau, torna-ho a provar en un moment."
+      }
+    }
+  },
   "contact": {
     "label": {
       "email": "Correu-e"
@@ -54,4 +61,4 @@
       "invitationNotAvailable": "Ho sentim, l'enviament de la invitació no està disponible actualment per a aquesta aplicació."
     }
   }
-}
+},
