--- a/BrightID/locales/fa/translation.json
+++ b/BrightID/locales/fa/translation.json
@@ -118,6 +118,7 @@
       "success": "انجام شد",
       "sure": "حتما",
       "text": {
+        "commonError": "متأسفیم، نتوانستیم درخواست شما را تکمیل کنیم. لطفا کمی بعد دوباره امتحان کنید.",
         "incorrectPassword": "رمزعبور اشتباه است!",
         "lostKeys": "لطفا یک BrightID جدید بساز یا BrightID قبلیتو بازیابی کن",
         "passwordMatch": "رمزعبور و تایید آن یکسان نیستند.",
