--- a/BrightID/locales/hi/translation.json
+++ b/BrightID/locales/hi/translation.json
@@ -132,6 +132,7 @@
       "success": "सफल",
       "sure": "ज़रूर",
       "text": {
+        "commonError": "क्षमा करें, हम आपका अनुरोध पूरा नहीं कर सके। कृपया एक क्षण में पुन: प्रयास करें।",
         "incorrectPassword": "गलत पासवर्ड!",
         "lostKeys": "कृपया एक नया BrightID बनाएं या अपने पिछले BrightID को पुनर्प्राप्त करने का प्रयास करें",
         "passwordMatch": "पासवर्ड और पुष्टि पासवर्ड मेल नहीं खाते।",
