--- a/BrightID/locales/ru/translation.json
+++ b/BrightID/locales/ru/translation.json
@@ -142,6 +142,7 @@
       "success": "Успешно",
       "sure": "Конечно",
       "text": {
+        "commonError": "Извините, мы не смогли выполнить ваш запрос. Пожалуйста, повторите попытку через мгновение.",
         "failedOp": "Ошибка {{name}} !\n{{message}}",
         "incorrectPassword": "Неверный пароль!",
         "lostKeys": "Пожалуйста, создайте новый BrightID или попробуйте восстановить предыдущий BrightID",
