--- a/BrightID/locales/vi/translation.json
+++ b/BrightID/locales/vi/translation.json
@@ -4,6 +4,13 @@
       "findFriends": "mời gọi"
     }
   },
+  "common": {
+    "alert": {
+      "text": {
+        "commonError": "Xin lỗi, chúng tôi không thể hoàn thành yêu cầu của bạn. Vui lòng thử lại sau giây lát."
+      }
+    }
+  },
   "findFriends" : {
     "button": {
       "invite": "mời gọi"
