--- a/BrightID/locales/zh_Hant/translation.json
+++ b/BrightID/locales/zh_Hant/translation.json
@@ -113,6 +113,7 @@
       "success": "成功",
       "sure": "確認",
       "text": {
+        "commonError": "抱歉，我們無法完成您的請求。請稍後再試。",
         "failedOp": "{{name}}失敗!\n{{message}}",
         "lostKeys": "請創建一個新的 BrightID 或嘗試恢復您以前的 BrightID",
         "passwordMatch": "密碼和密碼確認輸入不一致。",
