--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -122,11 +122,13 @@
         "lostKeys": "Please create a new BrightID or try recovering your previous BrightID",
         "passwordMatch": "Password and confirm password does not match.",
         "passwordShort": "Your password must be at least 8 characters long.",
-        "recoverySigned": "One of your recovery connections signed your request"
+        "recoverySigned": "One of your recovery connections signed your request",
+        "invalidSigningKey": "Your signing key is not valid. This might because:\n- You recovered your BrightID on another device.\n- You removed this device from your active devices list.\n- You had a failing recoveery.\n- The node you are connected to has a problem."
       },
       "title": {
         "lostKeys": "We've lost the BrightID keypair from the device",
-        "pleaseConfirm": "Please Confirm"
+        "pleaseConfirm": "Please Confirm",
+        "invalidSigningKey": "Invalid Signing Key"
       },
       "yes": "Yes"
     },
