enable soulbound apps use v6 sponsorship model

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -64,6 +64,7 @@
       "text": {
         "blindSigAlreadyLinked": "You are already linked with {{app}} with id {{appUserId}}",
         "blindSigAlreadyLinkedDifferent": "You are trying to link with {{app}} using {{appUserId}}. You are already linked with {{app}} with different id {{previousAppUserIds}}. This may lead to problems using the app.",
+        "duplicateAppUserId": "The id {{appUserId}} is used by another user to get sponsored before.",
         "checkWebsite": "To find out more about {{name}}, check out their website!",
         "invalidApp": "{{app}} is not a valid app!",
         "invalidContext": "{{context}} is not a valid context!",
