--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -197,14 +197,18 @@
       "levelJustMet": "This person is a stranger I just met",
       "levelRecovery": "I trust this person to recover my BrightID for me",
       "levelSuspicious": "I don't know this person at all",
-      "reportDuplicate": "This connection is a duplicate",
+      "reportDuplicate": "This user is maliciously creating multiple accounts",
       "reportOther": "Other reason",
-      "reportReplaced": "This connection is old and replaced by another account",
+      "reportReplaced": "The user has lost access to this old account and established a new one",
       "reportSpammer": "This person spammed me with an unwanted connection request",
       "reportSuspicious": "This account belonged to a different person before",
       "unkownRecoveryConnection": "Unknown",
       "unReportConnection": "Restore connection",
-      "unReportImpact": "You have already reported {{name}} as a {{reportReason}}. Would you like to remove this flag and restore your connection?"
+      "unReportImpact": "You have already reported {{name}} as a {{reportReason}}. Would you like to remove this flag and restore your connection?",
+      "removeConnection": "Disconnect from {{name}}",
+      "reportConnection": "Report {{name}}",
+      "whyReport": "Please tell us why you are suspicious of this connection",
+      "whyRemove": "Please tell us why you want to remove this connection"
     }
   },
   "connections": {
