--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -444,7 +444,7 @@
       "text": "Open this link with the BrightID app that should be imported.",
       "title": "Import BrightID link"
     },
-    "clipboardmessage": "Export your BrightID to another device: {{link}}",
+    "clipboardmessage": "Export your BrightID to another device: {{link}}. This link is valid until {{expirationTimestamp}}.",
     "header": {
       "title": "Import Account"
     },
@@ -667,7 +667,7 @@
       "text": "Share this link with your recovery connections.",
       "title": "Recovery link"
     },
-    "clipboardmessage": "Help me recover my BrightID: {{link}}",
+    "clipboardmessage": "Help me recover my BrightID: {{link}}. This link is valid until {{expirationTimestamp}}.",
     "error": {
       "mismatchId": "Your recovery connections selected different accounts",
       "title": "Account recovery failed",
@@ -780,7 +780,7 @@
       "text": "Open this link with the BrightID app that should be synced.",
       "title": "Sync user data"
     },
-    "clipboardmessage": "Sync your BrightID data with another device: {{link}}",
+    "clipboardmessage": "Sync your BrightID data with another device: {{link}}. This link is valid until {{expirationTimestamp}}.",
     "text": {
       "additionalInfo": "This QR code should be scanned using your other device to sync data between them",
       "askScanning": "Please scan this QR code using your other device"
