BrightID-1067 Increase max. number of connections in 1:n channels

--- a/BrightID/locales/de/translation.json
+++ b/BrightID/locales/de/translation.json
@@ -646,8 +646,8 @@
       "showCode": "Deinen Code anzeigen"
     },
     "header": {
-      "connections": "{{count}} / 30 Verbindungen",
-      "connections_plural": "{{count}} / 30 Verbindungen"
+      "connections": "{{count}} / {{max}} Verbindungen",
+      "connections_plural": "{{count}} / {{max}} Verbindungen"
     },
     "label": {
       "connectionType": "Verbindungstyp:"
