feat: copy local server url to clipboard

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -438,6 +438,11 @@
     },
     "link": {
       "community": "Join the Community"
+    },
+    "alert": {
+      "text": {
+        "copied": "Server url copied to clipboard!"
+      }
     }
   },
   "import": {
