--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -64,6 +64,7 @@
       "text": {
         "blindSigAlreadyLinked": "You are already linked with {{app}} with the ID {{appUserId}}",
         "blindSigAlreadyLinkedDifferent": "You are trying to link with {{app}} using {{appUserId}}. You are already linked with {{app}} with different id {{previousAppUserIds}}. This may lead to problems using the app.",
+        "callbackError": "App {{context}} reported an error: {{error}}",
         "checkWebsite": "To find out more about {{name}}, check out their website!",
         "invalidApp": "{{app}} is not a valid app!",
         "invalidContext": "{{context}} is not a valid context!",
@@ -75,21 +76,14 @@
         "notPrimary": "You are currently using a secondary device. Linking app \"{{app}}\" requires interaction with your primary device. Please sync with your primary device or perform the linking with your primary device."
       },
       "title": {
-        "invalidApp": "Failed",
-        "invalidContext": "Failed",
+        "callbackError": "Error while executing app callback",
         "linkApp": "Link App?",
-        "linkFailure": "Failed",
-        "linkSuccess": "Success",
-        "linkingFailed": "App linking failed",
-        "notPrimary": "Linking not possible"
+        "linkingFailed": "App linking failed"
       }
     },
     "text": {
       "noApps": "No Apps",
-      "notSponsored": "You're not sponsored.\nPlease find an app below to sponsor you.",
-      "pendingLink": "Linking your account in {{context}} to your BrightID…",
-      "sigsUpdating": "Updating blind signatures for apps…",
-      "sponsoring": "{{app}} is sponsoring you…"
+      "notSponsored": "You're not sponsored.\nPlease find an app below to sponsor you."
     }
   },
   "channel": {
@@ -124,14 +118,12 @@
         "commonError": "Sorry, We Couldn't Complete Your Request. Please Try Again in a Moment.",
         "failedOp": "{{name}} failed!\n{{message}}",
         "invalidSigningKey": "Your signing key is not valid. This might be because:\n- You recovered your BrightID on another device.\n- You removed this device from your active devices list.\n- You had a failed recovery.\n- The node that you are connected to has a problem.",
-        "lostKeys": "Please create a new BrightID or try recovering your previous BrightID",
         "passwordMatch": "Password and confirm password does not match.",
         "passwordShort": "Your password must be at least 8 characters long.",
         "recoverySigned": "One of your recovery connections signed your request"
       },
       "title": {
         "invalidSigningKey": "Invalid Signing Key",
-        "lostKeys": "We've lost the BrightID keypair from the device",
         "pleaseConfirm": "Please Confirm"
       },
       "yes": "Yes"
@@ -158,9 +150,9 @@
     },
     "tag": {
       "connectionDate": "Connected {{date}}",
-      "reportReason": " as {{reportReason}}",
       "reported": "(reported)",
-      "reportedByUser": "reported by you"
+      "reportedByUser": "reported by you",
+      "reportReason": " as {{reportReason}}"
     },
     "text": {
       "noConnection": "Couldn't connect to server",
@@ -205,9 +197,9 @@
       "reportReplaced": "The user has lost access to this old account and established a new one",
       "reportSpammer": "This person spammed me with an unwanted connection request",
       "reportSuspicious": "This account belonged to a different person before",
+      "unkownRecoveryConnection": "Unknown",
       "unReportConnection": "Restore connection",
       "unReportImpact": "You have already reported {{name}} as a {{reportReason}}. Would you like to remove this flag and restore your connection?",
-      "unkownRecoveryConnection": "Unknown",
       "whyRemove": "Please tell us why you want to remove this connection",
       "whyReport": "Please tell us why you are suspicious of this connection"
     }
@@ -464,6 +456,31 @@
       "askScanning": "Please scan this QR code using your other device",
       "waitImporting": "Importing connections, please wait ..."
     }
+  },
+  "missingKeysScreen": {
+    "header": "Corrupt keypair",
+    "options": {
+      "import": {
+        "followWorkflow": "Follow the Import workflow",
+        "header": "Import from another device",
+        "notes": "Precondition: You have your brightId installed on another device",
+        "selectImport": "Select \"Import\" option at startup"
+      },
+      "reinstall": "Uninstall and reinstall BrightID app",
+      "restart": {
+        "header": "Start from scratch",
+        "notes": "This is the last-resort option. You will create a new BrightID and lose all existing connections and verifications.",
+        "selectCreate": "Select \"Create my BrightID\" option at startup"
+      },
+      "socialRecovery": {
+        "followWorkflow": "Follow the Recovery workflow",
+        "header": "Perform Social recovery",
+        "notes": "Precondition: You have social recovery set up",
+        "selectRecovery": "Select \"Recover\" option at startup"
+      }
+    },
+    "recoveryOptions": "Recovery options",
+    "subHeader": "The signing keys on this device got lost or corrupted. You can not use the BrightID app unless this is fixed."
   },
   "nodeApiGate": {
     "reset": {
