--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -81,7 +81,7 @@
         "linkApp": "Link your account in {{context}} to your BrightID?",
         "linkFailure": "Failed to link your account in {{context}} to your BrightID\n{{result}}",
         "linkSigFailed": "Error linking verification {{verification}} to app {{appId}}. Error message: {{msg}}",
-        "linkSuccess": "Succesfully linked your account in {{context}} to your BrightID",
+        "linkSuccess": "Successfully linked your account in {{context}} to your BrightID",
         "missingBlindSig": "No blind sig found for app {{appId}}. Verifications missing: {{missingVerifications}}. Verifications already linked: {{linkedVerifications}}",
         "missingVerification": "You are missing verifications: {{verifications}}.",
         "notPrimary": "You are currently using a secondary device. Linking app \"{{app}}\" requires interaction with your primary device. Please sync with your primary device or perform the linking with your primary device."
@@ -488,7 +488,7 @@
       "import": {
         "followWorkflow": "Follow the Import workflow",
         "header": "Import from another device",
-        "notes": "Precondition: You have your brightId installed on another device",
+        "notes": "Precondition: You have your brightID installed on another device",
         "selectImport": "Select \"Import\" option at startup"
       },
       "reinstall": "Uninstall and reinstall BrightID app",
@@ -724,7 +724,7 @@
     "error": {
       "mismatchId": "Your recovery connections selected different accounts",
       "title": "Account recovery failed",
-      "unknown": "An unknown error occured"
+      "unknown": "An unknown error occurred"
     },
     "header": {
       "text": "Part 1: Recover account"
